--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
     <div class="container" id="principal">
         <div class="row justify-content-md-center">
             <div class="col-md-6">
-                <h1 class="text-center">Brevis</h1>
+                <h1 class="text-center">Breviare</h1>
             </div>
         </div>
         <div class="row justify-content-md-center">
