--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Brevis</title>
-  <meta name="description" content="Brevis: A minimalist URL Shortener made in Javascript">
+  <title>Breviare</title>
+  <meta name="description" content="Breviare: A minimalist URL Shortener made in Javascript">
   <meta name="author" content="SitePoint">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -15,26 +15,26 @@
 <body>
     
     <div class="container" id="principal">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center" style="padding-bottom: 5%;">
             <div class="col-md-6">
-                <h1 class="text-center">Breviare</h1>
+                <img src="/img/logo2.jpg" alt="logo" class="img-fluid mx-auto d-block animated fadeInDown"/>
             </div>
         </div>
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center animated fadeInUp">
             <div class="col-md-6">
                 <form id="urlForm">
                     <div class="form-group">
                         <input type="text" class="form-control" name="url" id="url">
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="btn btn-success btn-block" value="Go"/>
+                        <input type="submit" class="btn btn-warning btn-block" style="color: white;" value="SHORTEN URL"/>
                     </div>
                 </form>
             </div>
         </div>
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center animated fadeInUp">
             <div class="col-md-6">
-                <h6 class="text-left" style="color: white;">Last URLs</h6>
+                <h6 class="text-left" style="color: #E3AA13;">Latests URLs</h6>
             </div>            
         </div>
         <div id="urls">
