--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgba(245,85,85,1);
+    background-color: rgba(255,255,255,1);
 }
 
 h1 {
@@ -7,7 +7,7 @@ h1 {
 }
 
 #principal{
-    padding-top: 50px;
+    padding-top: 5%;
 }
 
 div {
