--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,6 +34,8 @@
         </div>
         <div class="row justify-content-md-center animated fadeInUp">
             <div class="col-md-6">
+                <a class="github-button" href="https://github.com/Cospel1/breviare" data-icon="octicon-star" aria-label="Star Cospel1/breviare on GitHub">Star</a>
+                <a class="github-button" href="https://github.com/Cospel1" aria-label="Follow @Cospel1 on GitHub">Follow @Cospel1</a>
                 <h6 class="text-left" style="color: #E3AA13;">Latests URLs</h6>                
             </div>            
         </div>
@@ -42,7 +44,7 @@
             <div class="row justify-content-md-center">
               <div class="col-md-6">
                 <p class="text-left animated fadeIn">
-                  <a href="/{{_id}}" target="_blank" style="color: #E3AA13;">Brevia.re/{{_id}}</a>
+                  <a href="/{{_id}}" target="_blank" style="color: #E3AA13;">brevia.re/{{_id}}</a>
                 </p>
               </div>
             </div>
@@ -53,6 +55,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="/js/ajax.js"></script>
 </body>
 </html>
